--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,16 +1,18 @@
-/*
-  Специально для тёмной темы при наличии класса,
-  здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 :root.theme-dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
-}
+  /* Фоновые изображения */
+  --cover-image: url(../images/cover-image-dark.png);
 
-.theme-dark .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
+  /* Цветовые переменные */
+  --accent-clr: #ff0070;
+  --accent-clr-with-background: #000028;
+  --accent-heading-clr: #db00ff;
+  --text-clr: #f1b2ce;
+  --heading-clr: #ff0070;
+  --decorative-bracket-clr: #ff0070;
+  --menu-clr: #ff0070;
+  --headers-clr: #ff0070;
+  --rec-decoration-clr: #ff0070;
+
+  /* Состояния кнопок */
+  --button-hover-clr: #ff007066;
 }
