--- a/styles/light.css
+++ b/styles/light.css
@@ -1,16 +1,37 @@
-/*
-  Специально для светлой темы при наличии класса.
-  Здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 :root.theme-light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  /* Фоновые изображения */
+  --cover-image: url(../images/cover-image-light.png);
+
+  /* Цветовые переменные */
+  --accent-clr: #ff8dcb;
+  --accent-clr-with-background: #353430;
+  --accent-heading-clr: #ffc2e6;
+  --text-clr: #353430;
+  --heading-clr: #353430;
+  --decorative-bracket-clr: #353430;
+  --menu-clr: #353430;
+  --rec-decoration-clr: transparent;
+
+  /* Состояния кнопок */
+  --button-hover-clr: #32312d66;
 }
 
-.theme-light .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
+@media (prefers-color-scheme: light) {
+  :root {
+    /* Фоновые изображения */
+    --cover-image: url(../images/cover-image-light.png);
+
+    /* Цветовые переменные */
+    --accent-clr: #ff8dcb;
+    --accent-clr-with-background: #353430;
+    --accent-heading-clr: #ffc2e6;
+    --text-clr: #353430;
+    --heading-clr: #353430;
+    --decorative-bracket-clr: #353430;
+    --menu-clr: #353430;
+    --rec-decoration-clr: transparent;
+
+    /* Состояния кнопок */
+    --button-hover-clr: #32312d66;
+  }
 }
