--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,4 +1,26 @@
-/*
-  Переменные для вашего проекта
-  и их переопределение под различные устройства
-*/
+:root {
+  /* Цветовые переменные */
+  --accent-clr: #ff0070;
+  --accent-clr-with-background: #000028;
+  --accent-heading-clr: #db00ff;
+  --text-clr: #f1b2ce;
+  --heading-clr: #ff0070;
+  --decorative-bracket-clr: #ff0070;
+  --menu-clr: #ff0070;
+  --headers-clr: #ff0070;
+  --rec-decoration-clr: #ff0070;
+
+  /* Фоновые изображения */
+  --cover-image: url(../images/cover-image-dark.png);
+
+  /* Шрифты и отступы */
+  --main-font: 'IBM Plex mono';
+  --gap: 20px;
+
+  /* Размеры текста */
+  --accent-heading-fs-mobile: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  --accent-heading-fs-desktop: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+
+  /* Состояния кнопок */
+  --button-hover-clr: #ff007066;
+}
