--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,10 +5,12 @@
 }
 
 body {
-  margin: 0 auto;
+  margin: 0;
+  padding: 0;
   min-inline-size: 375px;
   max-inline-size: 1440px;
 }
+
 
 h1,
 h2,
