--- a/styles/dark.css
+++ b/styles/dark.css
@@ -12,6 +12,7 @@
   --menu-clr: #ff0070;
   --headers-clr: #ff0070;
   --rec-decoration-clr: #ff0070;
+  --bg-clr: #000028;
 
   /* Состояния кнопок */
   --button-hover-clr: #ff007066;
